{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "67a45eaa-c6a9-4006-8525-c0ff5957ea45",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "c4f268fe-480b-463c-aebc-c14eb75957eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "2a853173-b4ff-4c14-bdfe-8ff2ff3c6179",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootCanon",
                    "type": "Button",
                    "id": "d3e425c5-90ce-448e-b5b8-cfa1a54ab1c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootLaser",
                    "type": "Button",
                    "id": "1355344a-edc7-412e-8b56-173b28d757cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eb7a4a77-e50f-4574-aea9-f9fcb5366388",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "ShootCanon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "625a6414-887a-43e7-a5e8-82c0b261cf58",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "489b59ea-0043-4d99-9607-1e3f8fbfced2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "79c80d13-4793-4d8f-ad23-e4b55fc12ea7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "282d7b0b-7961-42e0-9f03-131122a1f755",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "ShootLaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfe6e668-e38a-4abb-b6af-a97d2c8b9576",
                    "path": "<Keyboard>/w",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and Keyboard",
            "bindingGroup": "Mouse and Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}